# cui-builder

./: .clippy.toml  .cursorrules  .gitignore  Cargo.toml  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  styles.css  tsconfig.json  tsconfig.tsbuildinfo
src/: App.css  App.tsx  app.rs  lib.rs  main.rs  main.tsx  styles.css
src/components/: component.rs  infinite.rs  infinite_canvas.rs  mod.rs  properties.rs  sidebar.rs  toolbar.rs  unity_canvas.rs
src/components/canvas/: CanvasEditor.tsx  ElementShape.tsx  UnityCanvasShape.tsx  container.rs  element.rs  index.ts  infinite.rs  mod.rs  unity.rs  unity_canvas.rs
src/components/cui-components/: Button.ts  Image.ts  NeedsCursor.ts  NeedsKeyboard.ts  RawImage.ts  RectTransform.ts  Text.ts  index.ts  registry.ts  types.ts
src/components/inspector/: ComponentInspector.css  ComponentInspector.tsx  ContainerInspector.tsx  Inspector.tsx
src/components/properties/: mod.rs  panel.rs  properties.rs
src/components/sidebar/: Hierarchy.tsx  TreeItem.tsx  element_item.rs  mod.rs  toolbar.rs
src/core/: mod.rs
src/core/component/: button.rs  image.rs  mod.rs  rect.rs  text.rs  unity_canvas.rs  unity_transform.rs
src/core/utils/: element.rs  mod.rs
src/entities/: element.rs  mod.rs
src/entities/cui_container/: Cargo.toml  lib.rs  model.rs
src/entities/cui_element/: Cargo.toml  lib.rs  mod.rs  model.rs
src/entities/cui_element/components/: button.rs  image.rs  interface.rs  mod.rs  needs_cursor.rs  needs_keyboard.rs  raw_image.rs  rect_transform.rs  text.rs
src/features/: mod.rs
src/features/canvas/: Cargo.toml  mod.rs  model.rs  ui.rs
src/features/element-tree/: Cargo.toml  model.rs  ui.rs
src/features/element_tree/: mod.rs  model.rs  ui.rs
src/features/properties/: Cargo.toml  mod.rs  model.rs  panel.rs  ui.rs
src/lib/types/: cui-types.ts
src/models/: element.rs  mod.rs  transform.rs  workspace.rs
src/oxide_interface/: CuiElementContainer.rs  CuiHelper.rs  cui_element_container.rs  cui_helper.rs  mod.rs
src/oxide_interface/components/: CuiButtonComponent.rs  CuiImageComponent.rs  CuiNeedsKeyboardComponent.rs  CuiRawImageComponent.rs  CuiRectTransformComponent.rs  CuiTextComponent.rs  component_type.rs  cui_button_component.rs  cui_image_component.rs  cui_needs_cursor_component.rs  cui_needs_keyboard_component.rs  cui_raw_image_component.rs  cui_rect_transform_component.rs  cui_text_component.rs  mod.rs
src/oxide_interface/elements/: CuiButton.rs  CuiElement.rs  CuiLabel.rs  CuiPanel.rs  cui_button.rs  cui_element.rs  cui_label.rs  cui_panel.rs  i_cui_element.rs  mod.rs
src/shared/: mod.rs
src/shared/api/: http.rs  mod.rs  websocket.rs
src/shared/lib/: component.rs  mod.rs  types.rs  utils.rs
src/shared/ui/: button.rs  input.rs  mod.rs  panel.rs  styles.rs
src/store/: canvas-store.ts  history.ts
src/styles/: base.css  canvas.css  infinite_canvas.css  mod.rs  properties.css  sidebar.css
src/widgets/: mod.rs
src/widgets/canvas/: Cargo.toml  canvas.rs  lib.rs  toolbar.rs
src/widgets/sidebar/: Cargo.toml  mod.rs  (+2 more)
(+10 files in other folders)
