[package]
name = "cui-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "MouseEvent",
    "WheelEvent",
    "DragEvent",
    "DataTransfer",
    "TouchEvent",
    "TouchList",
    "Touch",
    "console"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
typetag = "0.2"
