[package]
name = "cui-element"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
typetag = "0.2.19"
downcast-rs = "1.2.0" 